# OMM-model

./: Cargo.toml  EN.README.md  README.EN.md  README.md  omm-core.js  omm-studio.html  package.json  rollup.config.mjs  tsconfig.json
.github/workflows/: build.yml
js/: omm-component.js  omm_core.js  omm_core_bg.wasm
src/: animation.rs  base64.rs  geometry.rs  index.ts  json.rs  lib.rs  mesh.rs  parser.rs  renderer.rs  types.rs
src/animation/: index.ts
src/controls/: index.ts
src/convert/: gltf.rs  mod.rs  obj.rs
src/geometry/: index.ts
src/parser/: index.ts
src/renderer/: index.ts
src/types/: index.ts
