[package]
name = "omm-core"
version = "3.0.0"
edition = "2021"
description = "Ultra-lightweight 3D model engine — Rust/WASM core (zero JS dependencies)"
license = "MIT"
authors = ["NelikKKL"]
repository = "https://github.com/NelikKKL/OMM-model"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "Window",
  "console",
]

[profile.release]
opt-level = "s"
lto       = true
panic     = "abort"
